--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>My First Website</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a simple HTML page.</p>
+  <h1>Welcome to My Website : )</h1>
+  <p>Read my epic comic I made:</p>
   <img src="comic.png" alt="A cool comic I made." width="1000">
 </body>
 </html>
