--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <title>My First Website</title>
 </head>
 <body>
-  <h1>Welcome to My Website : ) test test</h1>
+  <h1>Welcome to My Website : )</h1>
+  <a href="https://ko-fi.com/saghaley">COMMISSIONS(closed)</a>
+  <a href="https://x.com/Saghaley">Twitter (X)</a>
+  <a href="https://bsky.app/profile/saghaley.com">Bsky</a>
+  <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">Youtube</a>
+  <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a>
+  <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a>
+  <a href="example.com">another link</a>
+  <p></p>
   <p>Read my epic comic I made:</p>
   <img src="comic.png" alt="A cool comic I made." width="1000">
 </body>
