--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <a href="https://bsky.app/profile/saghaley.com">Bsky</a><br>
   <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">Youtube</a><br>
   <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a><br>
-  <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a><br>
-  <a href="example.com">another link</a>
+  <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a><br><br>
+  <a href="https://saghaley.com/gallery" style="font-size: 24px;">VIEW GALLERY</a>
+<br><br><br>
   <p></p>
   <p>Read my awesome comic I made:</p>
   <img src="comic.png" alt="A cool comic I made." width="1000">
