not first website

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,21 +16,21 @@
 <body>
   <h1>Gallery</h1>
   <p></p>
-  <img src="angelofdeath.webp" alt=" " width="1000">
-  <img src="glt.webp" alt=" " width="1000">
-  <img src="dvwnpour.webp" alt=" " width="1000">
-  <img src="deltarune.webp" alt=" " width="1000">
-  <img src="angel.webp" alt=" " width="1000">
-  <img src="hello.webp" alt=" " width="1000">
-  <img src="ics.webp" alt=" " width="700">
-  <img src="lake.webp" alt=" " width="1000">
-  <img src="mado.webp" alt=" " width="1000">
-  <img src="mots.webp" alt=" " width="650">
-  <img src="napple.webp" alt=" " width="1000">
-  <img src="ref.webp" alt=" " width="1000">
-  <img src="refuge.webp" alt=" " width="1000">
-  <img src="secondshot.webp" alt=" " width="650">
-  <img src="shelter.webp" alt=" " width="650">
-  <img src="subway.webp" alt=" " width="1000">
+  <img src="angelofdeath.webp" alt=" " width="1000"><br>
+  <img src="glt.webp" alt=" " width="1000"><br>
+  <img src="dvwnpour.webp" alt=" " width="1000"><br>
+  <img src="deltarune.webp" alt=" " width="1000"><br>
+  <img src="angel.webp" alt=" " width="1000"><br>
+  <img src="hello.webp" alt=" " width="1000"><br>
+  <img src="ics.webp" alt=" " width="700"><br>
+  <img src="lake.webp" alt=" " width="1000"><br>
+  <img src="mado.webp" alt=" " width="1000"><br>
+  <img src="mots.webp" alt=" " width="650"><br>
+  <img src="napple.webp" alt=" " width="1000"><br>
+  <img src="ref.webp" alt=" " width="1000"><br>
+  <img src="refuge.webp" alt=" " width="1000"><br>
+  <img src="secondshot.webp" alt=" " width="650"><br>
+  <img src="shelter.webp" alt=" " width="650"><br>
+  <img src="subway.webp" alt=" " width="1000"><br>
 </body>
 </html>
