--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">Youtube</a><br>
   <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a><br>
   <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a><br><br>
-  <a href="https://saghaley.com/gallery" style="font-size: 24px;">VIEW GALLERY</a>
+  <a href="https://www.saghaley.com/gallery" style="font-size: 24px;">VIEW GALLERY</a>
 <br><br><br>
   <p></p>
   <p>Read my awesome comic I made:</p>
