--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Welcome to My Website : )</h1>
   <a href="https://ko-fi.com/saghaley">COMMISSIONS(closed)</a><br>
   <a href="https://x.com/Saghaley">Twitter (X)</a><br>
-  <a href="https://bsky.app/profile/saghaley.com">Bsky</a><br>
+  <a href="https://bsky.app/profile/saghaley.com">Bsky (probably broken)</a><br>
   <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">Youtube</a><br>
   <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a><br>
   <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a><br><br>
