--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <br><br><br>
   <p></p>
   <p>Read my awesome comic I made:</p>
-  <img src="comic.png" alt="A cool comic I made." width="1000">
+  <img src="comic.png" alt="A cool comic I made." width="1000"><br>
+  <a href="https://www.saghaley.com/comic/#1">Next comic</a>
+
 </body>
 </html>
