--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p></p>
   <p>Read my awesome comic I made:</p>
   <img src="comic.png" alt="A cool comic I made." width="1000"><br>
-  A<a href="https://www.saghaley.com/comic/#1">Next comic</a>
+  <a href="https://www.saghaley.com/comic/#1">Next comic</a>
 
 </body>
 </html>
