--- a/comic/index.html
+++ b/comic/index.html
@@ -8,10 +8,13 @@
       text-align: center;
     }
     img {
-      display: block;
-      margin: 0 auto;
-      max-width: 100%;
-    }
+		display: block;
+		margin: 0 auto;
+		max-width: 100%;
+		max-height: 90vh;
+		height: auto;
+		width: auto;
+	}
     .nav {
       text-align: center;
       font-size: 24px;
@@ -35,7 +38,7 @@
   <div class="nav" id="nav"></div>
 
   <script>
-    const totalPages = 2; // Set to your total number of comic pages
+    const totalPages = 4; // Set to your total number of comic pages
     const imagePrefix = "comic";
     const imageExt = ".webp";
 
