--- a/index.html
+++ b/index.html
@@ -3,21 +3,128 @@
 <head>
   <meta charset="UTF-8">
   <title>Saghaley</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fdfdfd;
+      color: #222;
+      margin: 40px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+    .links a {
+      display: block;
+      margin: 8px 0;
+      color: #0056b3;
+      text-decoration: none;
+      font-size: 18px;
+    }
+    .links a:hover {
+      text-decoration: underline;
+    }
+    .gallery-link {
+      display: inline-block;
+      margin: 30px 0;
+      font-size: 24px;
+      padding: 10px 20px;
+      background-color: #0056b3;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    .gallery-link:hover {
+      background-color: #003e8a;
+    }
+    .comic-section {
+      margin-top: 60px;
+    }
+    .comic-section img {
+      width: 100%;
+      max-width: 900px;
+      height: auto;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin: 0 auto 10px;
+      display: block;
+    }
+
+    /* Cube Styles */
+    .cube-wrapper {
+      perspective: 800px;
+      margin-top: 40px;
+      height: 200px;
+    }
+    .cube-link {
+      display: inline-block;
+      text-decoration: none;
+    }
+	.cube {
+	  position: relative;
+	  width: 80px;
+	  transform-style: preserve-3d;
+	  transform: rotateX(-20deg) rotateY(20deg);
+	  animation: spin 6s infinite linear;
+	  margin: 0 auto;
+	}
+
+	.cube div {
+	  position: absolute;
+	  width: 80px;
+	  height: 80px;
+	  background: #3498db;
+	  border: 2px solid #fff;
+	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	  box-sizing: border-box;
+	  backface-visibility: hidden;
+	  transform-origin: center;
+	}
+
+	.front  { transform: translateZ(40px); }
+	.back   { transform: rotateY(180deg) translateZ(40px); }
+	.right  { transform: rotateY(90deg) translateZ(40px); }
+	.left   { transform: rotateY(-90deg) translateZ(40px); }
+	.top    { transform: rotateX(90deg) translateZ(40px); }
+	.bottom { transform: rotateX(-90deg) translateZ(40px); }
+
+    @keyframes spin {
+      from { transform: rotateX(-20deg) rotateY(0deg); }
+      to   { transform: rotateX(-20deg) rotateY(360deg); }
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website : )</h1>
-  <a href="https://ko-fi.com/saghaley">COMMISSIONS(closed)</a><br>
-  <a href="https://x.com/Saghaley">Twitter (X)</a><br>
-  <a href="https://bsky.app/profile/saghaley.com">Bsky (probably broken)</a><br>
-  <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">Youtube</a><br>
-  <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a><br>
-  <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a><br><br>
-  <a href="https://www.saghaley.com/gallery" style="font-size: 24px;">VIEW GALLERY</a>
-<br><br><br>
-  <p></p>
-  <p>Read my awesome comic I made:</p>
-  <img src="comic.png" alt="A cool comic I made." width="1000"><br>
-  <a href="https://www.saghaley.com/comic/#1">Next comic</a>
+  <h1>Saghaley Lewis</h1>
+<br>
+  <div class="links">
+    <a href="https://ko-fi.com/saghaley">COMMISSIONS (closed)</a>
+    <a href="https://x.com/Saghaley">Twitter (X)</a>
+    <a href="https://bsky.app/profile/saghaley.com">Bluesky (might be broken)</a>
+    <a href="https://www.youtube.com/channel/UCaLHCoQmUwkm5isVCFj76zA">YouTube</a>
+    <a href="https://saghaleylewis.newgrounds.com/">Newgrounds</a>
+    <a href="https://www.inprnt.com/gallery/nuuu/">Buy Prints</a>
+  </div>
 
+  <a class="gallery-link" href="https://www.saghaley.com/gallery">View Gallery</a>
+
+  <div class="comic-section">
+    <p>Read my awesome comic:</p>
+    <img src="comic.png" alt="A cool comic I made.">
+  </div>
+
+  <div class="cube-wrapper">
+    <a href="https://www.saghaley.com/comic/#1" class="cube-link" title="Next Page">
+      <div class="cube">
+        <div class="front"></div>
+        <div class="back"></div>
+        <div class="right"></div>
+        <div class="left"></div>
+        <div class="top"></div>
+        <div class="bottom"></div>
+      </div>
+    </a>
+  </div>
 </body>
 </html>
