--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
 	  animation: spin 6s infinite linear;
 	  margin: 0 auto;
 	}
-
 	.cube div {
 	  position: absolute;
 	  width: 80px;
 	  height: 80px;
-	  background: #3498db;
+	  background-image: url("face.png");
+	  background-size: cover;
+	  background-position: center;
 	  border: 2px solid #fff;
 	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	  box-sizing: border-box;
