comic arrows on top

--- a/comic/index.html
+++ b/comic/index.html
@@ -21,7 +21,7 @@
     .nav {
       text-align: center;
       font-size: 24px;
-      margin-top: 20px;
+      margin-bottom: 20px;
     }
     .nav span.disabled {
       color: gray;
@@ -47,6 +47,9 @@
   <h1></h1>
   <p></p>
 
+  <!-- moved nav above the comic image -->
+  <div class="nav" id="nav"></div>
+
   <div id="comicContainer">
     <a id="comicLink" href="#">
       <img id="comicImage" src="" alt="Comic page">
@@ -54,7 +57,6 @@
   </div>
   <br>
 
-  <div class="nav" id="nav"></div>
   <div class="home"><a href="https://www.saghaley.com">Home</a></div>
 
   <script>
